examples/invalid/contract_failures.sarif
fn main(flag: Bool) -> I32 requires result ensures result + flag { 3 }
